--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,5 +1,3 @@
-# version: '3.8'
-
 services:
   mariadb:
     build:
@@ -16,7 +14,7 @@ services:
     volumes: 
       - mariadb_data:/var/lib/mysql
     networks:
-    - inception
+      - inception
   
   wordpress:
     build:
@@ -32,15 +30,19 @@ services:
     volumes:
       - wordpress_data:/var/www/html
     networks:
-    - inception
+      - inception
   
   nginx:
     build:
       context: ./requirements/nginx
     container_name: nginx
     restart: always
+    volumes:
+      - wordpress_data:/var/www/html
     networks:
-    - inception
+      - inception
+    ports:
+      - "443:443"
 
 volumes:
   mariadb_data: # just declare named volume for mariadb
