--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,8 @@
 DOMAIN_NAME=nnarimat.42.fr
 DB_NAME=wordpress_db
-DB_HOST=mariadb:3306
+DB_HOST=mariadb
 DB_USER=wp_user
-DB_ADMIN=wp_master
+DB_USER_EMAIL=wp_user1@user.com
+DB_ADMIN=wp_admin
+DB_ADMIN_EMAIL=wp_admin1@admin.com
+
