--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,12 +1,12 @@
 # **************************************************************************** #
 #                                                                              #
-#                                                         ::::::::             #
-#    Dockerfile                                         :+:    :+:             #
-#                                                      +:+                     #
-#    By: nnarimatsu <nnarimatsu@student.codam.nl      +#+                      #
-#                                                    +#+                       #
-#    Created: 2025/07/22 10:42:45 by nnarimatsu    #+#    #+#                  #
-#    Updated: 2025/07/22 22:19:07 by nnarimatsu    ########   odam.nl          #
+#                                                         :::      ::::::::    #
+#    Dockerfile                                         :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: nnarimat <nnarimat@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2025/07/22 10:42:45 by nnarimatsu        #+#    #+#              #
+#    Updated: 2025/07/28 09:59:14 by nnarimat         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,6 +16,7 @@ RUN	apt update && \
 	apt install -y nginx openssl curl procps && \
 	apt clean && \
 	rm -rf /var/lib/apt/lists/*
+    #install dependencies
 
 RUN	rm -rf /etc/nginx/sites-enabled/default
 
@@ -28,4 +29,5 @@ RUN	mkdir -p /etc/nginx/ssl && \
 COPY conf/default.conf /etc/nginx/conf.d/default.conf
 
 CMD ["nginx", "-g", "daemon off;"]
-# nginx is running in the foreground
+# nginx is running in the foreground, so docker keeps the container alive
+
