--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -16,8 +16,8 @@ server {
     }
 
     location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_index index.php;
+        include /etc/nginx/fastcgi_params;
+        fastcgi_index index.php; 
         fastcgi_pass  wordpress:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
